--- a/TCS/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TCS/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -157,7 +157,7 @@ ContentBrowserTab3.ActiveTypeFilters=
 ContentBrowserTab3.EnabledTypeFilters=
 ContentBrowserTab3.ActiveFrontendFilters=
 ContentBrowserTab3.EnabledFrontendFilters=
-ContentBrowserTab3.SelectedPaths=/Game/InfinityBladeWeapons/Weapons/Blade/Silly_Weapons/Blade_BatAxe
+ContentBrowserTab3.SelectedPaths=/Game/ThirdPersonBP/Blueprints
 ContentBrowserTab3.Favorites.SelectedPaths=
 ContentBrowserTab3.CollectionsExpanded=True
 ContentBrowserTab3.SelectedCollections=
@@ -926,6 +926,8 @@ SkeletalMeshComponent.ComponentReplication=True
 SkeletalMeshComponent.Activation=True
 SkeletalMeshComponent.Cooking=True
 SkeletalMeshComponent.Events=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1606,6 +1608,8 @@ PinnedCommandList.TimeStamp=2019.01.30-14.27.53
 PinnedCommandList.LastCompileMethod=Unknown
 ClothingSystemEditorInterface.TimeStamp=2019.01.30-14.27.38
 ClothingSystemEditorInterface.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2019.01.30-14.27.46
+ExternalImagePicker.LastCompileMethod=Unknown
 
 [/Script/EditorStyle.EditorStyleSettings]
 SelectionColor=(R=0.728000,G=0.364000,B=0.003000,A=1.000000)
@@ -1707,10 +1711,10 @@ UdpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.
 WmfMediaSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RightPaddle,InputSettings.Bindings.ActionMappings.LeftPaddle,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/InfinityBladeWeapons/Weapons/Blade/Silly_Weapons/Blade_BatAxe/SK_Blade_BatAxe
-MRUItem1=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
-MRUItem2=/Game/Mannequin/Character/Mesh/SK_Mannequin
-MRUItem3=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem1=/Game/InfinityBladeWeapons/Weapons/Blade/Silly_Weapons/Blade_BatAxe/SK_Blade_BatAxe
+MRUItem2=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
+MRUItem3=/Game/Mannequin/Character/Mesh/SK_Mannequin
 MRUItem4=/Game/ThirdPersonBP/Blueprints/Ball_BP
 MRUItem5=/Game/ThirdPersonBP/Blueprints/Cam_BP
 
@@ -1732,6 +1736,7 @@ AutomationTestSettings="\"Object.Loading.EditorTestModules\" \"Object.Automation
 LogVisualizerSettings="\"Object.VisualLogger.GraphsBackgroundColor\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
+InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[9]\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=0
@@ -1788,5 +1793,35 @@ Contexts=(Name="SkeletalMeshEditor",Commands=)
 Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
 Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bFavorPureCastNodes=False
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bShowInheritedVariables=False
+bShowEmptySections=True
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+Bookmarks=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
+SaveOnCompile=SoC_SuccessOnly
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
 
 
