--- a/TCS/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TCS/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -930,8 +930,7 @@ K2Node_InputKey.Input=True
 K2Node_InputKey.Modifier=True
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
+CleanShutdown=False
 
 [PluginBrowser]
 InstalledPlugins=MenuStarterKitPlugin
