--- a/TCS/Saved/Config/Windows/Engine.ini
+++ b/TCS/Saved/Config/Windows/Engine.ini
@@ -33,4 +33,12 @@ JavaPath=(Path="")
 [MagicLeapSettings]
 WindowMirrorMode=1
 
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
+
 
