destibal meshes added

--- a/TCS/Config/DefaultEngine.ini
+++ b/TCS/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=TCS
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+EditorStartupMap=/Game/ThirdPersonBP/Maps/Daniel.Daniel
 GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 TransitionMap=
 bUseSplitscreen=True
