--- a/.gitignore
+++ b/.gitignore
@@ -70,7 +70,7 @@ Build/*/**
 Saved/*
 
 # Compiled source files for the engine to use
-Intermediate/*
+TCS/Intermediate/*
 Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
