--- a/TCS/Config/DefaultInput.ini
+++ b/TCS/Config/DefaultInput.ini
@@ -74,11 +74,11 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="RightPaddle",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Right)
 +ActionMappings=(ActionName="LeftPaddle",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftTrigger)
 +ActionMappings=(ActionName="LeftPaddle",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Left)
-+ActionMappings=(ActionName="RightPaddle",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightShoulder)
-+ActionMappings=(ActionName="LeftPaddle",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftShoulder)
 +ActionMappings=(ActionName="LeftPaddle",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Z)
 +ActionMappings=(ActionName="RightPaddle",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Slash)
 +ActionMappings=(ActionName="RightPaddle",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Draw",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftShoulder)
++ActionMappings=(ActionName="Draw",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightShoulder)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
