--- a/TCS/Config/DefaultGame.ini
+++ b/TCS/Config/DefaultGame.ini
@@ -1,6 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=5A95AA6C4F332329F4A2A2AA056781B2
-ProjectName=Third Person BP Game Template
+ProjectName=TCS
+Description=TCS
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "F5B63DFE46F45CCD18E6F99F93579DFD", "TCS")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "90AE4DFB490D19D02AEAD0B781164781", "TCS")
 
 [StartupActions]
 bAddPacks=True
