--- a/TCS/Config/DefaultEngine.ini
+++ b/TCS/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=TCS
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/ThirdPersonBP/Maps/Daniel.Daniel
-GameDefaultMap=/Game/Maps/Show.Show
+GameDefaultMap=/Game/ThirdPersonBP/Maps/MainMenu.MainMenu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
