--- a/TCS/Saved/Config/Windows/Game.ini
+++ b/TCS/Saved/Config/Windows/Game.ini
@@ -3,7 +3,7 @@ bAddPacks=False
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-StagingDirectory=(Path="C:/Users/Admin/Downloads/TCS")
+StagingDirectory=(Path="C:/Users/danie/Downloads/tcs show")
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
